--- a/client/foodstorage.css
+++ b/client/foodstorage.css
@@ -67,6 +67,11 @@ body {
   margin-left: 10px;
 }
 
+.FoodStorageObjects
+{
+  min-height: 110px;
+}
+
 .FoodStorageObject
 {
   float: left;
@@ -133,4 +138,16 @@ body {
 .FoodStorageObject .delete:before 
 {
   content: "-";
+}
+
+.main-footer
+{
+  position: relative;
+  bottom: 0;
+  width: 98%;
+  background-color: aliceblue;
+  padding-left: 2%;
+  padding-top: 2px;
+  padding-bottom: 2px;
+  margin-top: 10px;
 }
